# BonBon_Cooking_Oil_POS

./: .gitignore  README.md
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  003_dates_and_multi_output.py  003_voucher_extra_charges.py  004_nullable_payment_method.py  006_voucher_item_price_per_viss.py
backend/app/: main.py
backend/app/common/services/: __init__.py  integrity.py  pricing.py  reconciliation.py
backend/app/common/utils/: datetime.py  pagination.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: base.py  mixins.py  session.py
backend/app/middleware/: audit.py  request_id.py  timing.py
backend/app/modules/audit/: models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/modules/auth/: dependencies.py  routes.py  services.py
backend/app/modules/customers/: repositories.py  routes.py  schemas.py  services.py
backend/app/modules/expenses/: enums.py  models.py  routes.py  schemas.py  services.py
backend/app/modules/finance/: enums.py  models.py
backend/app/modules/finance/repositories/: __init__.py
backend/app/modules/finance/routes/: __init__.py
backend/app/modules/finance/services/: __init__.py
backend/app/modules/idempotency/: models.py  repositories.py  services.py
backend/app/modules/inventory/: dependencies.py  enums.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/modules/production/: dependencies.py  models.py  repositories.py  routes.py  services.py
backend/app/modules/reporting/: dependencies.py  routes.py  schemas.py  services.py
backend/app/modules/users/: dependencies.py  enums.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/modules/vouchers/: dependencies.py  enums.py  models.py  repositories.py  routes.py  schemas.py  services.py
backend/app/workers/tasks/: cleanup_tasks.py  inventory_tasks.py  report_tasks.py
backend/scripts/: seed_data.py
bonbon_oil_backend/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
bonbon_oil_backend/.github/workflows/: ci.yml
bonbon_oil_backend/alembic/versions/: 002_phase3_hardening.py
bonbon_oil_backend/app/: main.py
bonbon_oil_backend/app/common/repositories/: __init__.py  base.py
bonbon_oil_backend/app/common/schemas/: base.py
bonbon_oil_backend/app/core/: config.py  exceptions.py  logging.py  security.py
bonbon_oil_backend/app/database/: mixins.py  redis.py
bonbon_oil_backend/app/middleware/: audit.py  idempotency.py
bonbon_oil_backend/app/workers/: celery_app.py
bonbon_oil_backend/docs/: business_rules.md
bonbon_oil_backend/scripts/: create_superadmin.py  seed_data.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: audit.ts  auth.ts  client.ts  customers.ts  expenses.ts  finance.ts  index.ts  inventory.ts  production.ts  reports.ts  users.ts  vouchers.ts
frontend/src/db/: index.ts
frontend/src/hooks/: useOnlineStatus.ts  usePendingUploads.ts  useToast.ts
frontend/src/i18n/: en.json  index.ts  mm.json
frontend/src/lib/: constants.ts  queryClient.ts  utils.ts
frontend/src/router/: ProtectedRoute.tsx  index.tsx
frontend/src/store/: auth.ts  ui.ts
frontend/src/types/: api.ts  audit.ts  auth.ts  customers.ts  expenses.ts  finance.ts  index.ts  inventory.ts  production.ts  reports.ts  users.ts  vouchers.ts
(+85 files in other folders)
